# tiny_autograd

./: pyproject.toml  test.py  tiny_autodiff.py  tiny_autograd.py
examples/: mnist_mlp.py
